<resources>
   <string name="app_name">dgAlert Classic</string>
   <string name="new_text_at">New message at %s</string>
   <string name="unread_text_waiting">%d other unread thread(s)</string>
   <string name="mms_subject">Subject:</string>
   <string name="new_private_text">New message</string>
   <string name="notification_multiple_title">New messages</string>
   <string name="notification_multiple_text">%d unread messages.</string>
   <string name="notification_scroll">%s: %s</string>
   <string name="notification_scroll_privacy">New message from: %s</string>
   <string name="button_close">Close</string>
   <string name="button_reply">Reply</string>
   <string name="button_inbox">Inbox</string>
   <string name="button_view">View</string>
   <string name="button_view_mms">View MMS</string>
   <string name="button_delete">Delete</string>
   <string name="button_next">Next</string>
   <string name="button_previous">Previous</string>
   <string name="button_unlock">Unlock</string>
   <string name="pref_other_title">Misc.</string>
   <string name="pref_screen_settings_title">SMS Screen</string>
   <string name="pref_enabled_key">enabled</string>
   <string name="pref_enabled_title">Enable SMS Settings</string>
   <string name="pref_enabled_summaryon">dgAlert Classic SMS settings are enabled</string>
   <string name="pref_enabled_summaryoff">dgAlert Classic SMS settings are disabled</string>
   <string name="pref_about_key">about</string>
   <string name="pref_about_title">About</string>
   <string name="pref_about_summary">About dgAlert Classic</string>
   <string name="pref_about_text">dgAlert Concept and these modifications created by: Mike DG\nEmail: alertandroid@mikedg.com\nWebsite: http://android.mikedg.com\n\nOriginal base code created and GPl\'ed by Adam K.\n\nEmail: adam@everythingandroid.net\n\ndgAlert Classic is an application to enhance the usability of SMS alerts on your phone.\n\nGPL license available at http://www.gnu.org/licenses/gpl.txt \n\nSource code available at http://android.mikedg.com/Home/dgAlertClassic.zip\n\n</string>
   <string name="pref_sendemail_key">sendemail</string>
   <string name="pref_sendemail_title">E-mail the Developer</string>
   <string name="pref_sendemail_summary">E-mail comments or bugs to the developer</string>
   <string name="pref_sendemail_dialog">Can I include your system information in the e-mail (this will help me troubleshoot bugs easier)?</string>
   <string name="pref_sendemail_buttonok">Sure</string>
   <string name="pref_sendemail_buttoncancel">No way</string>
   <string name="pref_sms_settings_title">SMS Settings</string>
   <string name="pref_sms_settings_summary">Settings for SMS.</string>
   <string name="pref_timeout_key">timeout</string>
   <string name="pref_timeout_title">Screen Timeout</string>
   <string name="pref_timeout_summary">The screen will sleep after this time</string>
   <string name="pref_timeout_default">30</string>
   <string name="pref_dimscreen_key">dimscreen</string>
   <string name="pref_dimscreen_title">Dim Screen</string>
   <string name="pref_dimscreen_summaryon">Screen will be dim (saves battery)</string>
   <string name="pref_dimscreen_summaryoff">Screen will be bright</string>
   <string name="pref_dimscreen_default">false</string>
   <string name="pref_privacy_key">privacy_string</string>
   <string name="pref_privacy_title">Privacy Mode</string>
   <string name="pref_privacy_summary">Hide sender or all message information.</string>
   <string name="pref_privacy_summaryon">Contents of the message will only be shown after unlock</string>
   <string name="pref_privacy_summaryoff">Contents of the message will be shown immediately</string>
   <string name="pref_privacy_default">off</string>
   <string name="pref_markread_key">markread</string>
   <string name="pref_markread_title">Mark Read</string>
   <string name="pref_markread_summaryon">Messages will be marked as read when clicking \"Close\"</string>
   <string name="pref_markread_summaryoff">Messages will not be marked as read when clicking \"Close\"</string>
   <string name="pref_markread_default">true</string>
   <string name="pref_onlyShowOnKeyguard_key">showonkeyguard</string>
   <string name="pref_onlyShowOnKeyguard_title">Restrict Popup</string>
   <string name="pref_onlyShowOnKeyguard_summaryon">Popup window will only show when keyguard is engaged</string>
   <string name="pref_onlyShowOnKeyguard_summaryoff">Popup will always show</string>
   <string name="pref_onlyShowOnKeyguard_default">false</string>
   <string name="pref_require_unlock_key">requireunlock</string>
   <string name="pref_require_unlock_title">Require Screen Unlock</string>
   <string name="pref_require_unlock_summaryon">Buttons will be hidden till screen is unlocked</string>
   <string name="pref_require_unlock_summaryoff">Buttons will show immediately</string>
   <string name="pref_require_unlock_default">false</string>
   <string name="pref_inbox_app_key">inboxapp</string>
   <string name="pref_inbox_app_title">Choose Inbox App</string>
   <string name="pref_inbox_app_summary">Choose the application that is launched for multiple messages</string>
   <string name="pref_inbox_app_info">Note that the "Reply" messaging application is set by the system</string>
   <string name="pref_show_delete_button_key">showdelete</string>
   <string name="pref_show_delete_button_title">Show a Delete Button</string>
   <string name="pref_show_delete_button_summaryon">Delete button is enabled</string>
   <string name="pref_show_delete_button_summaryoff">Delete button is disabled</string>
   <string name="pref_show_delete_button_default">false</string>
   <string name="pref_show_delete_button_dialog_title">Delete Message</string>
   <string name="pref_show_delete_button_dialog_text">Are you sure?</string>
   <string name="pref_blur_key">blur</string>
   <string name="pref_blur_title">Blur Background</string>
   <string name="pref_blur_summaryon">The background behind the message window will be blurred out</string>
   <string name="pref_blur_summaryoff">The background behind the message window will not be blurred</string>
   <string name="pref_notif_category_title">Notification Configuration</string>
   <string name="pref_vibrate_category_title">Vibrate Configuration</string>
   <string name="pref_flashled_category_title">LED Configuration</string>
   <string name="pref_reminder_category_title">Reminder Configuration</string>
   <string name="pref_notif_enabled_key">notification</string>
   <string name="pref_notif_enabled_title">Enable Notifications</string>
   <string name="pref_notif_enabled_summaryon">Notifications are enabled</string>
   <string name="pref_notif_enabled_summaryoff">Notifications are disabled</string>
   <string name="pref_notif_test_key">notiftest</string>
   <string name="pref_notif_test_title">Test Notification</string>
   <string name="pref_notif_test_summary">Test out your notification</string>
   <string name="pref_notif_test_message">Testing your notification now!</string>
   <string name="pref_notif_sound_key">notifsound</string>
   <string name="pref_notif_sound_title">Notification Sound</string>
   <string name="pref_notif_sound_summary">This sound will play when a message is received</string>
   <string name="pref_vibrate_key">vibrate</string>
   <string name="pref_vibrate_title">Vibrate</string>
   <string name="pref_vibrate_summaryon">Vibrate is on</string>
   <string name="pref_vibrate_summaryoff">Vibrate is off</string>
   <string name="pref_vibrate_default">true</string>
   <string name="pref_vibrate_pattern_key">vibrate_pattern</string>
   <string name="pref_vibrate_pattern_title">Vibrate Pattern</string>
   <string name="pref_vibrate_pattern_summary">Set the vibration pattern</string>
   <string name="pref_vibrate_pattern_default">0,1200</string>
   <string name="pref_flashled_key">flashled</string>
   <string name="pref_flashled_title">Blink LED</string>
   <string name="pref_flashled_summaryon">Blink LED when a message is received</string>
   <string name="pref_flashled_summaryoff">Do not blink LED when a message is received</string>
   <string name="pref_flashled_default">true</string>
   <string name="pref_flashled_color_key">flashled_color</string>
   <string name="pref_flashled_color_title">LED Color</string>
   <string name="pref_flashled_color_summary">The color of the LED</string>
   <string name="pref_flashled_color_default">Blue</string>
   <string name="pref_flashled_pattern_key">flashled_pattern</string>
   <string name="pref_flashled_pattern_title">LED Blink Rate</string>
   <string name="pref_flashled_pattern_summary">Set the speed the LED blinks</string>
   <string name="pref_flashled_pattern_default">1000,1000</string>
   <string name="pref_notif_repeat_key">notif_repeat</string>
   <string name="pref_notif_repeat_title">Enable Reminders</string>
   <string name="pref_notif_repeat_summaryon">Unread message reminders are enabled</string>
   <string name="pref_notif_repeat_summaryoff">Unread message reminders are disabled</string>
   <string name="pref_notif_repeat_default">false</string>
   <string name="pref_notif_repeat_interval_key">notif_repeat_interval</string>
   <string name="pref_notif_repeat_interval_title">Reminder Interval</string>
   <string name="pref_notif_repeat_interval_summary">The time period between notification reminders</string>
   <string name="pref_notif_repeat_interval_default">5</string>
   <string name="pref_notif_repeat_interval_dialogTitle">Interval (minutes)</string>
   <string name="pref_notif_repeat_times_key">notif_repeat_num</string>
   <string name="pref_notif_repeat_times_title">Number of Reminders</string>
   <string name="pref_notif_repeat_times_summary">The number of reminder notifications to play</string>
   <string name="pref_notif_repeat_times_default">2</string>
   <string name="pref_notif_repeat_screen_on_key">notif_repeat_screen_on</string>
   <string name="pref_notif_repeat_screen_on_title">Screen on for Reminders</string>
   <string name="pref_notif_repeat_screen_on_summaryon">Reminders will turn screen on again</string>
   <string name="pref_notif_repeat_screen_on_summaryoff">Reminders will not turn screen on</string>
   <string name="pref_notif_repeat_screen_on_default">false</string>
   <string name="pref_show_latest_key">show_latest</string>
   <string name="pref_show_latest_title">Show Latest</string>
   <string name="pref_show_latest_summaryon">The latest message will be shown in notification drawer when multiple unread are present.</string>
   <string name="pref_show_latest_summaryoff">A generic multiple message notification will be shown in notification drawer when multiple unread are present.</string>
   <string name="pref_show_latest_default">true</string>
   <string name="pref_ring_in_call_key">ring_in_call</string>
   <string name="pref_ring_in_call_title">Ring In Calls</string>
   <string name="pref_ring_in_call_summaryon">Notification sound will play while on a call.</string>
   <string name="pref_ring_in_call_summaryoff">Notification sound will not play while on a call.</string>
   <string name="pref_ring_in_call_default">false</string>
   <string name="pref_vibrate_in_call_key">vibrate_in_call</string>
   <string name="pref_vibrate_in_call_title">Vibrate In Calls</string>
   <string name="pref_vibrate_in_call_summaryon">Vibration will play while on a call.</string>
   <string name="pref_vibrate_in_call_summaryoff">Vibration will not play while on a call.</string>
   <string name="pref_vibrate_in_call_default">false</string>
   <string name="pref_screen_key">screen_on</string>
   <string name="pref_screen_title">Enable Screen On</string>
   <string name="pref_screen_summaryon">Screen will turn on when you receive a text message.</string>
   <string name="pref_screen_summaryoff">Screen will remain off when you receive a text message.</string>
   <string name="pref_screen_default">true</string>
   <string name="pref_sms_title">SMS</string>
</resources>