<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_sms_title">
		<com.blau.android.screenon.preferences.AppEnabledCheckBoxPreference
			android:key="@string/pref_enabled_key"
			android:title="@string/pref_enabled_title"
			android:summaryOn="@string/pref_enabled_summaryon"
			android:summaryOff="@string/pref_enabled_summaryoff"
			android:defaultValue="true" />
		<PreferenceScreen
			android:title="@string/pref_sms_settings_title"
			android:summary="@string/pref_sms_settings_summary"
			android:dependency="@string/pref_enabled_key">
			<PreferenceCategory
				android:title="@string/pref_screen_settings_title">
				<CheckBoxPreference
					android:summaryOn="@string/pref_screen_summaryon"
					android:summaryOff="@string/pref_screen_summaryoff"
					android:title="@string/pref_screen_title"
					android:defaultValue="@string/pref_screen_default"
					android:key="@string/pref_screen_key">
				</CheckBoxPreference>
				<ListPreference android:key="@string/pref_timeout_key"
					android:title="@string/pref_timeout_title"
					android:summary="@string/pref_timeout_summary"
					android:dependency="@string/pref_screen_key"
					android:entries="@array/pref_timeout_entries"
					android:entryValues="@array/pref_timeout_values"
					android:defaultValue="@string/pref_timeout_default" />
				<CheckBoxPreference
					android:key="@string/pref_dimscreen_key"
					android:title="@string/pref_dimscreen_title"
					android:summaryOn="@string/pref_dimscreen_summaryon"
					android:summaryOff="@string/pref_dimscreen_summaryoff"
					android:dependency="@string/pref_screen_key"
					android:defaultValue="@string/pref_dimscreen_default" />
			</PreferenceCategory>
			<PreferenceCategory
				android:title="@string/pref_notif_category_title">
				<com.blau.android.screenon.preferences.DialogCheckBoxPreference
					android:key="@string/pref_notif_enabled_key"
					android:title="@string/pref_notif_enabled_title"
					android:summaryOn="@string/pref_notif_enabled_summaryon"
					android:summaryOff="@string/pref_notif_enabled_summaryoff"
					android:defaultValue="false" />
				<ListPreference
					android:title="@string/pref_privacy_title"
					android:key="@string/pref_privacy_key"
					android:summary="@string/pref_privacy_summary"
					android:entryValues="@array/pref_notif_privacy_values"
					android:entries="@array/pref_notif_privacy_entries" android:defaultValue="off">
				</ListPreference>
				<!-- Old way <CheckBoxPreference
					android:key="@string/pref_privacy_key"
					android:title="@string/pref_privacy_title"
					android:summaryOn="@string/pref_privacy_summaryon"
					android:dependency="@string/pref_notif_enabled_key"
					android:summaryOff="@string/pref_privacy_summaryoff"
					android:defaultValue="@string/pref_privacy_default" />-->
				<CheckBoxPreference
					android:title="@string/pref_show_latest_title"
					android:key="@string/pref_show_latest_key"
					android:dependency="@string/pref_notif_enabled_key"
					android:summaryOn="@string/pref_show_latest_summaryon"
					android:summaryOff="@string/pref_show_latest_summaryoff"
					android:defaultValue="@string/pref_show_latest_default">
				</CheckBoxPreference>
				<RingtonePreference
					android:key="@string/pref_notif_sound_key"
					android:title="@string/pref_notif_sound_title"
					android:summary="@string/pref_notif_sound_summary"
					android:showDefault="true" android:showSilent="true"
					android:dependency="@string/pref_notif_enabled_key"
					android:defaultValue="content://settings/system/notification_sound"
					android:ringtoneType="all" />
				<CheckBoxPreference
					android:title="@string/pref_ring_in_call_title"
					android:key="@string/pref_ring_in_call_key"
					android:dependency="@string/pref_notif_enabled_key"
					android:summaryOn="@string/pref_ring_in_call_summaryon"
					android:summaryOff="@string/pref_ring_in_call_summaryoff"
					android:defaultValue="@string/pref_ring_in_call_default">
				</CheckBoxPreference>
				<com.blau.android.screenon.preferences.TestNotificationDialogPreference
					android:key="@string/pref_notif_test_key"
					android:dialogIcon="@drawable/android:ic_dialog_alert"
					android:title="@string/pref_notif_test_title"
					android:dialogTitle="@string/pref_notif_test_title"
					android:dialogMessage="@string/pref_notif_test_message"
					android:summary="@string/pref_notif_test_summary"
					android:dependency="@string/pref_notif_enabled_key"
					android:negativeButtonText="@null" />
			</PreferenceCategory>
			<PreferenceCategory
				android:title="@string/pref_vibrate_category_title">
				<CheckBoxPreference
					android:key="@string/pref_vibrate_key"
					android:title="@string/pref_vibrate_title"
					android:summaryOn="@string/pref_vibrate_summaryon"
					android:summaryOff="@string/pref_vibrate_summaryoff"
					android:defaultValue="@string/pref_vibrate_default"
					android:dependency="@string/pref_notif_enabled_key" />
				<com.blau.android.screenon.preferences.CustomVibrateListPreference
					android:key="@string/pref_vibrate_pattern_key"
					android:title="@string/pref_vibrate_pattern_title"
					android:summary="@string/pref_vibrate_pattern_summary"
					android:entries="@array/pref_vibrate_pattern_entries"
					android:entryValues="@array/pref_vibrate_pattern_values"
					android:defaultValue="@string/pref_vibrate_pattern_default"
					android:dependency="@string/pref_vibrate_key" />
				<CheckBoxPreference
					android:title="@string/pref_vibrate_in_call_title"
					android:key="@string/pref_vibrate_in_call_key"
					android:dependency="@string/pref_vibrate_in_call_key"
					android:summaryOn="@string/pref_vibrate_in_call_summaryon"
					android:summaryOff="@string/pref_vibrate_in_call_summaryoff"
					android:defaultValue="@string/pref_vibrate_in_call_default">
				</CheckBoxPreference>
									
			</PreferenceCategory>
			<PreferenceCategory
				android:title="@string/pref_flashled_category_title">
				<CheckBoxPreference
					android:key="@string/pref_flashled_key"
					android:title="@string/pref_flashled_title"
					android:summaryOn="@string/pref_flashled_summaryon"
					android:summaryOff="@string/pref_flashled_summaryoff"
					android:defaultValue="@string/pref_flashled_default"
					android:dependency="@string/pref_notif_enabled_key" />
				<com.blau.android.screenon.preferences.CustomLEDColorListPreference
					android:key="@string/pref_flashled_color_key"
					android:title="@string/pref_flashled_color_title"
					android:summary="@string/pref_flashled_color_summary"
					android:entries="@array/pref_led_color_entries"
					android:entryValues="@array/pref_led_color_values"
					android:defaultValue="@string/pref_flashled_color_default"
					android:dependency="@string/pref_flashled_key" />
				<com.blau.android.screenon.preferences.CustomLEDPatternListPreference
					android:key="@string/pref_flashled_pattern_key"
					android:title="@string/pref_flashled_pattern_title"
					android:summary="@string/pref_flashled_pattern_summary"
					android:entries="@array/pref_led_pattern_entries"
					android:entryValues="@array/pref_led_pattern_values"
					android:defaultValue="@string/pref_flashled_pattern_default"
					android:dependency="@string/pref_flashled_key" />
			</PreferenceCategory>
			<PreferenceCategory
				android:title="@string/pref_reminder_category_title">
				<CheckBoxPreference
					android:key="@string/pref_notif_repeat_key"
					android:title="@string/pref_notif_repeat_title"
					android:summaryOn="@string/pref_notif_repeat_summaryon"
					android:summaryOff="@string/pref_notif_repeat_summaryoff"
					android:defaultValue="@string/pref_notif_repeat_default"
					android:dependency="@string/pref_notif_enabled_key" />
				<ListPreference
					android:key="@string/pref_notif_repeat_times_key"
					android:title="@string/pref_notif_repeat_times_title"
					android:summary="@string/pref_notif_repeat_times_summary"
					android:entries="@array/pref_notif_repeat_times_entries"
					android:entryValues="@array/pref_notif_repeat_times_values"
					android:defaultValue="@string/pref_notif_repeat_times_default"
					android:dependency="@string/pref_notif_repeat_key" />
				<ListPreference
					android:key="@string/pref_notif_repeat_interval_key"
					android:title="@string/pref_notif_repeat_interval_title"
					android:summary="@string/pref_notif_repeat_interval_summary"
					android:entries="@array/pref_notif_repeat_interval_entries"
					android:entryValues="@array/pref_notif_repeat_interval_entries"
					android:dialogTitle="@string/pref_notif_repeat_interval_dialogTitle"
					android:defaultValue="@string/pref_notif_repeat_interval_default"
					android:dependency="@string/pref_notif_repeat_key" />
				<CheckBoxPreference
					android:key="@string/pref_notif_repeat_screen_on_key"
					android:title="@string/pref_notif_repeat_screen_on_title"
					android:summaryOn="@string/pref_notif_repeat_screen_on_summaryon"
					android:summaryOff="@string/pref_notif_repeat_screen_on_summaryoff"
					android:defaultValue="@string/pref_notif_repeat_screen_on_default"
					android:dependency="@string/pref_notif_repeat_key" />
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_other_title">
		<com.blau.android.screenon.preferences.WorkingDialogPreference android:key="@string/pref_about_key"
			android:dialogIcon="@drawable/icon"
			android:title="@string/pref_about_title"
			android:dialogTitle="@string/app_name"
			android:summary="@string/pref_about_summary"
			android:positiveButtonText="Ok"
			 />
		<com.blau.android.screenon.preferences.EmailDialogPreference
			android:key="@string/pref_sendemail_key"
			android:title="@string/pref_sendemail_title"
			android:summary="@string/pref_sendemail_summary"
			android:dialogIcon="@drawable/icon"
			android:dialogTitle="@string/pref_sendemail_title"
			android:dialogMessage="@string/pref_sendemail_dialog"
			android:positiveButtonText="@string/pref_sendemail_buttonok"
			android:negativeButtonText="@string/pref_sendemail_buttoncancel" />
	</PreferenceCategory>
</PreferenceScreen>

